--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,6 +30,6 @@ jobs:
       - name: Install Cosign
         uses: sigstore/cosign-installer@main
       - name: Sign the images with GitHub OIDC Token **not production ready**
-        run: cosign sign ghcr.io/ngerard556/cosign-app:latest
+        run: cosign sign --yes ghcr.io/ngerard556/cosign-app:latest
         env:
           COSIGN_EXPERIMENTAL: true
